<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardCornerRadius="11dp"
    android:layout_margin="5dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_margin="15dp"
            android:elevation="20dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toTopOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#D66161"
                android:gravity="center"
                android:text="@string/sp"
                android:fontFamily="@font/alegreya_sc"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold|italic" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:fontFamily="@font/carme"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toStartOf="@+id/collapseButton"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:alpha="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView2"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/tvPhoneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carme"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carme"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNo" />

        <ImageView
            android:id="@+id/collapseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/expand_less"
            android:src="@drawable/expand_less"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>