<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:elevation="20dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar_1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#D66161"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/sp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/expandButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/expand_more"
            android:src="@drawable/expand_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/carme"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toStartOf="@+id/expandButton"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>